apps/monkeytype/frontend/frontend-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: monkeytype-frontend-httproute
  namespace: monkeytype
spec:
  parentRefs:
    - name: mdch-lab-gateway
      namespace: cilium
  hostnames:
    - "monkeytype.mdch-lab.dev"
  rules:
  - matches:
      - path:
          type: PathPrefix
          value: "/"
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplaceFullPath
            replaceFullPath: "/"
    backendRefs:
      - name: frontend-service
        port: 80
